# kimchi

./: .gitignore  LICENSE  README.md  kimchi.py  kimchi_embed.py  kimchi_query.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.omx/: metrics.json  notepad.md  tmux-hook.json
.omx/hooks/: kimchi-session-end-embed.mjs
.omx/logs/: hooks-2026-02-28.jsonl  notify-fallback-2026-02-28.jsonl  tmux-hook-2026-02-28.jsonl  turns-2026-02-28.jsonl
.omx/state/: default-state.json  hud-state.json  notify-fallback-state.json  notify-hook-state.json  tmux-hook-state.json
.omx/state/hooks/plugins/kimchi-session-end-embed/: data.json
