[project]
name = "kimchi-codex"
version = "1.0.0"
description = "Codex-only local memory engine with URL embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kimchi = "kimchi:main"

[tool.setuptools]
py-modules = ["kimchi", "kimchi_embed", "kimchi_query"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
